# neural-network-from-scratch

./: README.md  pyproject.toml  shell.nix
neural_network_from_scratch/: __main__.py
