[tool.poetry]
name = "neural-network-from-scratch"
version = "0.1.0"
description = ""
authors = ["San7o <santigio2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
matplotlib = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
